[project]
name = "flash-attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pilot-Khadka", email = "khdpilot@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "triton>=3.7.0",
]

[project.scripts]
flash-attention = "flash_attention:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
]
